@@ -118,11 +118,11 @@ public class ThreatAssessmentService {
     public ThreatAssessment copy(final long sourceId) {
         final ThreatAssessment sourceAssessment = threatAssessmentDao.findById(sourceId).orElseThrow();
         final ThreatAssessment targetAssessment = new ThreatAssessment();
+		final List<ThreatCatalog> sourceThreatCatalogs = sourceAssessment.getThreatCatalogs();
         targetAssessment.setName(sourceAssessment.getName());
         targetAssessment.setThreatAssessmentType(sourceAssessment.getThreatAssessmentType());
         targetAssessment.setResponsibleUser(sourceAssessment.getResponsibleUser());
         targetAssessment.setResponsibleOu(sourceAssessment.getResponsibleOu());
-        targetAssessment.setThreatCatalogs(sourceAssessment.getThreatCatalogs());
         targetAssessment.setRegistered(sourceAssessment.isRegistered());
         targetAssessment.setOrganisation(sourceAssessment.isOrganisation());
         targetAssessment.setInherit(sourceAssessment.isInherit());
@@ -136,14 +136,18 @@ public class ThreatAssessmentService {
         targetAssessment.setAssessment(sourceAssessment.getAssessment());
         final ThreatAssessment savedAssessment = threatAssessmentDao.save(targetAssessment);
 
+		sourceThreatCatalogs.forEach(threatCatalog -> {
+			savedAssessment.getThreatCatalogs().add(threatCatalog);
+		});
+
         final List<CustomThreat> customThreats = sourceAssessment.getCustomThreats().stream()
             .map(c -> copyCustomThreat(savedAssessment, c))
             .toList();
-        savedAssessment.setCustomThreats(customThreats);
+        savedAssessment.getCustomThreats().addAll(customThreats);
         final List<ThreatAssessmentResponse> responses = sourceAssessment.getThreatAssessmentResponses().stream()
             .map(r -> copyResponse(savedAssessment, customThreats, r))
-            .collect(Collectors.toList());
-        savedAssessment.setThreatAssessmentResponses(responses);
+            .toList();
+        savedAssessment.getThreatAssessmentResponses().addAll(responses);
         return savedAssessment;
     }
 
